--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -2,16 +2,14 @@ name: Publish to NPM
 
 on:
   push:
-    inputs:
-      releaseArgs:
-        description: "Arguments to append to the release CLI command"
-        required: true
-        default: "--ci"
+    branches:
+      - main
 
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
+      - name: publish
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
@@ -19,8 +17,8 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: |
           npm install
-          npm run release -- ${{ github.event.inputs.releaseArgs }}
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+          npm run build
+          npm publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-          CI: true
